[tool.poetry]
name = "incidental-backend"
version = "0.1.0"
description = ""
authors = ["Sanjeevan Ambalavanar <hello@sanjeevan.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
structlog = "^23.1.0"
shortuuid = "^1.0.11"
black = "^23.7.0"
isort = "^5.12.0"
psycopg2-binary = "^2.9.7"
passlib = "^1.7.4"
typer = "^0.9.0"
python-multipart = "^0.0.6"
boto3 = "^1.28.23"
pytest = "^7.4.0"
slack-sdk = "^3.26.2"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["app"]

[tool.black]
line-length = 120