[tool.poetry]
name = "incidental-backend"
version = "0.1.0"
description = ""
authors = ["Sanjeevan Ambalavanar <hello@sanjeevan.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
structlog = "^24.2.0"
shortuuid = "^1.0.11"
psycopg2-binary = "^2.9.7"
typer = "^0.12.3"
python-multipart = "^0.0.9"
boto3 = "^1.28.23"
pytest = "^8.2.2"
slack-sdk = "^3.26.2"
httpx = "^0.27.0"
celery = "^5.4.0"
redis = "^5.0.4"
pyyaml = "^6.0.1"
pytz = "^2024.1"
pytest-cov = "^5.0.0"
pyotp = "^2.9.0"
bcrypt = "^4.1.3"
faker = "^27.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.6.1"
pytest-env = "^1.1.3"
types-pytz = "^2024.1.0.20240417"
black = "^24.4.2"
isort = "^5.13.2"
types-pyyaml = "^6.0.12.20240724"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["app"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120